<resources>
    <string name="app_name">Congress</string>
    <string name="app_version">4.9.1</string>
    <string name="app_version_older">Version 4.8 – 4.9</string>
    <string name="app_package_name">com.sunlightlabs.android.congress</string>
    <string name="search_bills_settings">Bills</string>
    <string name="search_people_settings">People</string>
    <string name="search_votes_settings">Votes</string>
    <string name="no_market_installed">You need to have the Google Play Store in order to review the app.</string>
    <string name="empty_last_name">No legislators found by that last name.</string>
    <string name="empty_general">No legislators found.</string>
    <string name="empty_bills_sponsored">This legislator has not sponsored any bills.</string>
    <string name="empty_bills">There are no bills that match your search.</string>
    <string name="empty_votes">This legislator has not cast any recent votes.</string>
    <string name="upcoming_header">COMING UP</string>
    <string name="upcoming_loading">Finding out…</string>
    <string name="upcoming_empty">No details on upcoming activity right now.</string>
    <string name="upcoming_error">Error loading upcoming activity.</string>
    <string name="bill_no_title">(no title)</string>
    <string name="bill_no_title_yet">(Bill information not yet available.)</string>
    <string name="bill_no_sponsor">This bill does not have a sponsor.</string>
    <string name="bill_no_sponsor_yet">Bill\'s sponsor not yet known.</string>
    <string name="bill_not_known_yet">We don\'t have information for this bill yet.</string>
    <string name="vote_no_voters_yet">Vote details not yet known.</string>
    <string name="votes_error">Error loading votes.</string>
    <string name="vote_results_header">RESULTS</string>
    <string name="error_loading_favorites">There was a problem loading your starred bills and legislators. If the problem persists, try un-starring and re-starring them.</string>
    <string name="loading_more_general">Loading more…</string>
    <string name="bills_loading">Plucking bills from the air…</string>
    <string name="legislator_loading_error">Couldn\'t load information for this lawmaker.</string>
    <string name="legislators_loading">Searching for lawmakers…</string>
    <string name="legislators_error">Error loading lawmakers.</string>
    <string name="legislators_loading_cosponsors">Loading cosponsors…</string>
    <string name="votes_loading">Plucking votes from the air…</string>
    <string name="bill_loading">Plucking bill from the air…</string>
    <string name="bill_cosponsor_other_singular">other</string>
    <string name="bill_cosponsor_other_plural">others</string>
    <string name="bill_summary_header">SUMMARY</string>
    <string name="bill_history_loading">Plucking the bill\'s history from the air…</string>
    <string name="bill_votes_loading">Plucking the bill\'s votes from the air…</string>
    <string name="legislator_loading">Plucking a person from the air…</string>
    <string name="loading">Loading…</string>
    <string name="bills_empty_code">No bills found by that bill code.</string>
    <string name="bills_empty_sponsor">No bills found by this person.</string>
    <string name="bills_empty_search_newest">No bills found by that search.\n\nYou can still tap the bar below to be notified when a match comes up.</string>
    <string name="bills_empty_search_relevant">No bills found by that search.\n\nWhen searching by relevance, searching is limited to the current session of Congress.\n\nBills from previous sessions of Congress will not appear.</string>
    <string name="votes_empty_voter">No votes found by this person.</string>
    <string name="votes_did_not_vote">Did Not Vote</string>
    <string name="new_result">NEW</string>
    <string name="committees_title">Committees</string>
    <string name="committees_loading">Plucking committees from the air…</string>
    <string name="committees_empty">No committees found.</string>
    <string name="committees_error">Error loading committees.</string>
    <string name="committees_no_subcommittees">No subcommittees.</string>
    <string name="legislator_no_committees">Belongs to no committees.</string>
    <string name="tab_committees_members">Members</string>
    <string name="tab_committees_sub">Subcommittees</string>
    <string name="floor_updates_title">The Floor</string>
    <string name="floor_updates_loading">Loading latest from the floor…</string>
    <string name="floor_updates_error">Error loading the latest from the floor.</string>
    <string name="floor_updates_related_roll">Related vote</string>
    <string name="floor_updates_related_bill">Related bill</string>
    <string name="hearings_title">Upcoming Hearings</string>
    <string name="hearings_loading">Loading upcoming hearings…</string>
    <string name="hearings_empty">No known upcoming hearings.</string>
    <string name="hearings_error">Error loading upcoming hearings.</string>
    <string name="hearings_no_calendar">Unable to find a standard Calendar app on this device.</string>
    <string name="hearings_header">Tap a hearing to add it your calendar.</string>
    <string name="voting_record">Voting Record</string>
    <string name="sponsored_bills">Sponsored Bills</string>
    <string name="committees">Committees</string>
    <string name="loading_committees">Loading committees…</string>
    <string name="view_legislator_district">View Legislator District</string>
    <string name="visit_website">Visit official website</string>
    <string name="map_loading">Loading a district map…</string>
    <string name="map_unsupported">Our apologies, but we\'re unable to support embedded district maps on Android 2.2 (Froyo) at this time.</string>
    <string name="error_connection">Couldn\'t connect to the network. Please try again when you have a connection.</string>
    <string name="connection_failed">Connection failed. Press refresh to try again.</string>
    <string name="vote_not_found">Vote details not yet available.</string>
    <string name="about_button">Cool</string>
    <string name="first_button">Awesome</string>
    <string name="explanation_button">Wow</string>
    <string name="changelog_button">Awesome</string>
    <string name="changelog_title_prefix">New In Version</string>
    <string name="explanation_title">Notifications</string>
    <string name="notifications_enable">Enable</string>
    <string name="notifications_no_enable">Not Now</string>
    <string name="explanation_1">You can be notified of new votes, bills, and all sorts of things.</string>
    <string name="explanation_2">First, enable this feature, then find what you\'re interested in and tap the bar at the bottom.</string>
    <string name="explanation_3">Please note:</string>
    <string name="explanation_3a">New bills can be delayed up to a day, votes up to an hour.</string>
    <string name="explanation_3b">Congress operates in bursts, so days may go by without any activity.</string>
    <string name="first_tip_1_header">Follow your representatives.</string>
    <string name="first_tip_1_body">Find, track, and call your representatives.</string>
    <string name="first_tip_2_header">Keep track of what\'s happening.</string>
    <string name="first_tip_2_body">See what\'s coming up, and what just went down.</string>
    <string name="first_tip_3_header">Stay up to date.</string>
    <string name="first_tip_3_body">Get notified in real time of new votes, floor activity, and more.</string>
    <string name="menu_main_bills">Bills</string>
    <string name="menu_main_votes">Votes</string>
    <string name="menu_main_legislators">People</string>
    <string name="menu_main_committees">Committees</string>
    <string name="menu_main_floor_updates">The Floor</string>
    <string name="menu_main_hearings">Hearings</string>
    <string name="search_legislators_hint">Search by name</string>
    <string name="search_legislators_label">Lawmakers</string>
    <string name="search_bills_hint">Search bills</string>
    <string name="search_bills_label">Bills</string>
    <string name="search_bills_recent">Most Recent</string>
    <string name="search_bills_relevant">Most Relevant</string>
    <string name="search_votes_hint">Search votes</string>
    <string name="search_votes_label">Votes</string>
    <string name="search_votes_recent">Most Recent</string>
    <string name="search_votes_relevant">Most Relevant</string>
    <string name="menu_legislators_no_favorites">Any senators and representatives you follow will be added here.\n\nYou can slide over to the right to find people by state, or by the chamber they\'re a part of.\n\nWhile viewing a person, follow them by tapping the star in the top right corner.</string>
    <string name="menu_bills_no_favorites">Any bills you follow will be added here.\n\nTo find bills, use the search button up top, or slide over to the right to see what bills just got introduced, or signed into law.\n\nWhile viewing a bill, follow it by tapping the star in the top right corner.</string>
    <string name="menu_bills_favorite">Starred</string>
    <string name="menu_bills_active">Active</string>
    <string name="menu_bills_law">Law</string>
    <string name="menu_bills_active_subscription">Active Bills</string>
    <string name="menu_bills_law_subscription">Law</string>
    <string name="menu_bills_recent">New</string>
    <string name="menu_bills_recent_subscription">New Bills</string>
    <string name="menu_bills_menu">Following</string>
    <string name="menu_legislators_following">Following</string>
    <string name="menu_legislators_state">States</string>
    <string name="menu_legislators_house">House</string>
    <string name="menu_legislators_senate">Senate</string>
    <string name="menu_votes_recent">Votes</string>
    <string name="menu_favorite_bill_error">Error loading starred bills.</string>
    <string name="menu_favorite_legislator_error">Error loading starred legislators.</string>
    <string name="menu_committees">Committees</string>
    <string name="subscriber_bills_all">New Bills</string>
    <string name="subscriber_bills_active">Active Bills</string>
    <string name="subscriber_bills_law">Enacted Legislation</string>
    <string name="bill_not_found">No bill found by that code.</string>
    <string name="bill_loading_error">Error while loading bill.</string>
    <string name="bills_error">Couldn\'t load bills.</string>
    <string name="bills_retry">Retry</string>
    <string name="bill_actions_empty">This bill has no activity at this time.</string>
    <string name="bill_votes_empty">No votes have taken place on this bill yet.</string>
    <string name="bill_vote_roll">Tap to see how each legislator voted.</string>
    <string name="notify_enable">Enable Notifications</string>
    <string name="notify_enable_summary_on">Notifications are enabled</string>
    <string name="notify_enable_summary_off">Notifications are disabled</string>
    <string name="notify_interval">Notification Interval</string>
    <string name="notify_vibration">Vibrate</string>
    <string name="notify_vibration_summary_on">Vibrate on notify</string>
    <string name="notify_vibration_summary_off">Do not vibrate on notify</string>
    <string name="notify_ringtone">Select a ringtone</string>
    <string name="title_of_bill">Title of Bill</string>
    <string name="no_summary_available">No summary available.</string>
    <string name="summary_goes_here">Summary goes here</string>
    <string name="feb_22_11">FEB 22, \'11</string>
    <string name="h_res_3222">H.Res. 3222</string>
    <string name="title_of_the_bill_and_such">Title Of The Bill And Such</string>
    <string name="on_motion_that_the_house_agree_to_the_senate">On motion that the House agree to the Senate…</string>
    <string name="passed_the_house">Passed the House</string>
    <string name="no_roll_call_was_taken_for_ths_vote">No roll call was taken for ths vote.</string>
</resources>