<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="10dp"
	
	android:orientation="horizontal"
	>
	
	<LinearLayout android:orientation="vertical"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        >
        
	    <TextView android:id="@+id/date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:layout_gravity="start"
			
			android:textSize="14sp"

			android:text="@string/feb_22_11"
			/>
	
		<TextView android:id="@+id/code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:layout_gravity="start"
			
			android:layout_marginTop="3dp"
			android:layout_marginRight="5dp"
			
			android:textSize="14sp"
			android:textColor="@color/text_grey"

			android:layout_marginEnd="5dp"
			android:text="@string/h_res_3222" />
		
		<include layout="@layout/new_result" />
	
	</LinearLayout>
		
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:baselineAligned="false"
		android:layout_marginStart="5dp">
		
		<TextView android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:lineSpacingExtra="2sp"
			
			android:textSize="18sp"

			android:text="@string/title_of_the_bill_and_such"
			/>
		
		<TextView android:id="@+id/last_action"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    
		    android:textSize="14sp"
		    android:textColor="@color/text_grey"

			android:text="@string/on_motion_that_the_house_agree_to_the_senate"
		    />

	</LinearLayout>
		
</LinearLayout>