<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="10dp"
	
	android:orientation="vertical"
	>
	
    <LinearLayout android:orientation="horizontal" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false">
	
	    <RelativeLayout 
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0"
	        >
	        
		    <TextView android:id="@+id/date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				
				android:textSize="14sp"

				android:layout_alignParentStart="true"
				android:text="@string/feb_22_11" />
			
		</RelativeLayout>
			
		<LinearLayout android:orientation="vertical"
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="5dp"
			android:layout_marginStart="5dp">
	    
			<TextView android:id="@+id/result"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				
				android:lineSpacingExtra="2sp"
				
				android:textSize="14sp"
				android:text="@string/passed_the_house"
				/>
			
			<TextView android:id="@+id/type_message"
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				
				android:layout_marginTop="3dp"
				
				android:textSize="14sp"
				android:textColor="@color/text_grey"
				android:text="@string/no_roll_call_was_taken_for_ths_vote"
				/>
			
		</LinearLayout>
		
	</LinearLayout>
		
</LinearLayout>