<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		
	    <LinearLayout android:id="@+id/header_inner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			
			android:padding="10dp"
			>
				
			<TextView android:id="@+id/title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				
				android:textSize="19sp"

				android:text="@string/title_of_bill"
				/>
				
		</LinearLayout>
		
		<include layout="@layout/line" />
		
		<include layout="@layout/bill_no_sponsor"
		    android:id="@+id/bill_no_sponsor"
		    android:visibility="gone"
		    />
		
		<LinearLayout android:orientation="horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    
		    android:id="@+id/bill_all_sponsors"
		    >
		
			<include layout="@layout/bill_sponsor"
			    android:id="@+id/bill_sponsor"
			    />
			
			<include layout="@layout/line_vertical"
			    android:id="@+id/bill_sponsor_line"
			    android:visibility="gone" 
			    />
			
			<FrameLayout android:id="@+id/bill_cosponsors_container" 
			    android:layout_width="wrap_content"
    			android:layout_height="match_parent"
    			android:background="@color/background_grey"
    			
    			android:visibility="gone"
    			>
			<include layout="@layout/bill_cosponsors"
			    android:id="@+id/bill_cosponsors"
			    />
			</FrameLayout>
		
		</LinearLayout>

		<include layout="@layout/header"
		    android:id="@+id/summary_header" 
		    />
  
		<include layout="@layout/loading"
		    android:id="@+id/summary_loading" 
		    />
		
		<TextView android:id="@+id/bill_no_summary"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="20dp"
			
			android:textSize="16sp"
			android:text="@string/no_summary_available"
			
			android:visibility="gone"
			/>
		
		<TextView android:id="@+id/bill_summary"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dp"
			
			android:textSize="16sp"

			android:text="@string/summary_goes_here"
			
			android:visibility="gone"
			/>
	    
    </LinearLayout>
</ScrollView>